--- a/pom.xml
+++ b/pom.xml
@@ -86,4 +86,12 @@
 			</plugins>
 		</pluginManagement>
 	</build>
+
+	<distributionManagement>
+		<repository>
+			<id>github</id>
+			<name>GitHub Boomerang Apache Maven Packages</name>
+			<url>https://maven.pkg.github.com/boomerang-io/flow.lib.streaming</url>
+		</repository>
+	</distributionManagement>
 </project>
