--- a/pom.xml
+++ b/pom.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>io.boomerang</groupId>
-	<artifactId>lib-jetstream</artifactId>
-	<version>0.0.2</version>
-	<name>lib-jetstream</name>
-	<url>https://www.useboomerang.io</url>
+	<artifactId>lib-eventing</artifactId>
+	<version>0.1.0</version>
+	<name>Boomerang Lib Eventing</name>
+	<url>https://github.com/boomerang-io/lib.eventing</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -18,14 +18,9 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-context</artifactId>
-			<version>5.3.9</version>
-		</dependency>
-		<dependency>
 			<groupId>io.nats</groupId>
 			<artifactId>jnats</artifactId>
-			<version>2.11.5</version>
+			<version>2.12.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.logging.log4j</groupId>
@@ -33,9 +28,9 @@
 			<version>2.14.1</version>
 		</dependency>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.11</version>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-engine</artifactId>
+			<version>5.8.1</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
@@ -91,7 +86,7 @@
 		<repository>
 			<id>github</id>
 			<name>GitHub Boomerang Apache Maven Packages</name>
-			<url>https://maven.pkg.github.com/boomerang-io/flow.lib.streaming</url>
+			<url>https://maven.pkg.github.com/boomerang-io/lib.eventing</url>
 		</repository>
 	</distributionManagement>
 </project>
