--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,18 @@
 			<version>5.8.1</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>berlin.yuna</groupId>
+			<artifactId>nats-server</artifactId>
+			<version>2.2.25</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.awaitility</groupId>
+			<artifactId>awaitility</artifactId>
+			<version>4.1.0</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
