--- a/pom.xml
+++ b/pom.xml
@@ -109,7 +109,7 @@
 						</goals>
 					</execution>
 					<execution>
-						<id>report</id>
+						<id>generate-code-coverage-report</id>
 						<phase>test</phase>
 						<goals>
 							<goal>report</goal>
