--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
 			<version>4.2.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+		    <groupId>io.github.resilience4j</groupId>
+		    <artifactId>resilience4j-retry</artifactId>
+		    <version>1.7.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
