--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
 		    <artifactId>resilience4j-retry</artifactId>
 		    <version>1.7.0</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.13.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
