--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>io.boomerang</groupId>
 	<artifactId>lib-eventing</artifactId>
-	<version>0.3.1</version>
+	<version>0.3.2</version>
 	<name>Boomerang Lib Eventing</name>
 	<url>https://github.com/boomerang-io/lib.eventing</url>
 
@@ -15,7 +15,15 @@
 		<maven.compiler.source>${java.version}</maven.compiler.source>
 		<maven.compiler.target>${java.version}</maven.compiler.target>
 	</properties>
-
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.codehaus.plexus</groupId>
+				<artifactId>plexus-utils</artifactId>
+				<version>3.0.24</version>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 	<dependencies>
 		<dependency>
 			<groupId>io.nats</groupId>
